--- a/paperwork-automation/package.json
+++ b/paperwork-automation/package.json
@@ -28,7 +28,9 @@
     "build": "tsc",
     "help": "python3 scripts/extract-all.py --help",
     "status": "ts-node scripts/extract-sql-enhanced.ts status",
-    "open-automation-menu": "python3 scripts/automation-menu.py"
+    "open-automation-menu": "python3 scripts/automation-menu.py",
+    "generate-comparison": "python3 scripts/generate_database_report.py",
+    "generate-comparison:date": "python3 scripts/generate_database_report.py --date"
   },
   "keywords": [
     "excel",
