--- a/paperwork-automation/.gitignore
+++ b/paperwork-automation/.gitignore
@@ -1,18 +1,6 @@
-# Node.js / TypeScript
-node_modules/
-dist/
-.npm
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# 🍲 Haidilao Paperwork Automation System - Python-Only Project
 
-# Python
+# === PYTHON ===
 __pycache__/
 *.py[cod]
 *$py.class
@@ -36,14 +24,28 @@ wheels/
 venv/
 ENV/
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Project specific
-output/
-data/*.xlsx
-data/*.xls
-*.log
-.DS_Store
-.idea/
-.vscode/
-*.swp
-.history/ 
+# === PROJECT SPECIFIC ===
+output/                    # Generated reports
+data/*.xlsx               # Input Excel files (contains sensitive data)
+data/*.xls                # Legacy Excel files
+*.log                     # Log files
+
+# === DEVELOPMENT ===
+.DS_Store                 # macOS system files
+.idea/                    # JetBrains IDEs
+.vscode/                  # VS Code settings (optional)
+*.swp                     # Vim swap files
+.history/                 # Local file history
+.pytest_cache/            # pytest cache
+.coverage                 # Code coverage files
+htmlcov/                  # Coverage HTML reports
+
+# === DATABASE ===
+*.db                      # SQLite databases (if any)
+*.sqlite3                 # SQLite databases
+.env.db                   # Database credentials 
