--- a/paperwork-automation/requirements.txt
+++ b/paperwork-automation/requirements.txt
@@ -12,13 +12,10 @@ sqlalchemy>=2.0.0,<3.0.0           # SQL toolkit and ORM
 
 # === UTILITIES ===
 python-dotenv>=1.0.0,<2.0.0        # Environment variable management
-pathlib                             # File path operations (built-in Python 3.4+)
-datetime                            # Date/time handling (built-in)
-logging                             # Logging support (built-in)
 
 # === WEB SCRAPING ===
 selenium>=4.15.0,<5.0.0            # Web browser automation
 webdriver-manager>=4.0.0,<5.0.0    # Automatic WebDriver management
 
-# === DEVELOPMENT & TESTING ===
-unittest                            # Unit testing framework (built-in) 
+# Note: pathlib, datetime, logging, and unittest are built-in Python modules
+# and should not be listed in requirements.txt 
